[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "taivium"
version = "0.0.3"
description = "Deterministic identity + privacy layer for LLM applications"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"
[project.optional-dependencies]
dev = ["pytest", "flake8", "tox"]