[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "taivium"
version = "0.1.3"
description = "Deterministic identity + privacy layer for LLM applications"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"
dependencies = [
    "toml>=0.10.2",
    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",  # Removed for PyPI compatibility
    "spacy==3.8.11",
    "openai==1.80.0",
    "click==8.4.1",
]
[project.optional-dependencies]
dev = ["pytest", "flake8", "tox"]
redis = ["redis>=5.0.0"]
transformers = ["transformers==4.31.0","torch>=2.7.1,<3.0.0",]